--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "zod": "latest"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
